--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -14,7 +14,7 @@ body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     // up świąteczny 
-    background: url('../images/autumn.jpg');
+    background: url('../images/aurora.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -69,5 +69,6 @@ body {
     @import './parts/crm';
     @import './parts/chat';
     @import './parts/rippleBtn';
+    @import './parts/consumption';
 
 }
