--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,6 @@ html
         li 
           a(href="/stats")  Stats
         li 
-          a(href="/crm")  CRM    
+          a(href="/consumption")  Zużycie FV    
     block content
 script(src="/javascripts/mobile.js") 
