--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1723,6 +1723,21 @@ body .consumption-wrapper {
   border-radius: 20px;
 }
 
+body .consumption-wrapper #showAboutConsumption,
+body .consumption-wrapper #conumptionBtn {
+  display: block;
+  margin: 0 auto;
+}
+
+body .consumption-wrapper__fvs {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+  border-top: 1px solid #d9cfcf;
+  border-bottom: 1px solid #d9cfcf;
+  padding: 10px;
+}
+
 body .consumption-wrapper p {
   font-weight: bolder;
   letter-spacing: 1px;
@@ -1736,4 +1751,63 @@ body .consumption-wrapper #conumptionBtn {
   font-size: 20px;
   margin-top: 10px;
   color: #33302a;
+}
+
+body .consumption-wrapper #consumption-score {
+  text-align: center;
+  color: darkslategray;
+}
+
+body .about-consumption {
+  display: none;
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 70%;
+  background-color: antiquewhite;
+  padding: 15px;
+  border-radius: 5px;
+  border: 3px solid black;
+  z-index: 10;
+}
+
+body .about-consumption__close {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  font-size: 30px;
+  color: brown;
+  cursor: pointer;
+  transition: .5s;
+}
+
+body .about-consumption__close:hover {
+  color: red;
+}
+
+body .about-consumption__heading {
+  color: green;
+  font-size: 30px;
+}
+
+body .about-consumption__par {
+  letter-spacing: 1px;
+  color: darkolivegreen;
+  font-size: 20px;
+}
+
+body .about-consumption__par--important {
+  color: brown;
+  font-weight: bold;
+  text-align: center;
+  border: 2px solid brown;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+body .about-consumption__img {
+  display: block;
+  width: 100%;
+  border: 2px solid black;
 }
