fix bugs & small css fix bug with validation of calcing consumption - begining value cannot be greater than end value css - heading center

--- a/public/stylesheets/parts/_consumption.css
+++ b/public/stylesheets/parts/_consumption.css
@@ -21,6 +21,10 @@
   padding: 10px;
 }
 
+.consumption-wrapper h2 {
+  text-align: center;
+}
+
 .consumption-wrapper p {
   font-weight: bolder;
   letter-spacing: 1px;
