--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1738,6 +1738,10 @@ body .consumption-wrapper__fvs {
   padding: 10px;
 }
 
+body .consumption-wrapper h2 {
+  text-align: center;
+}
+
 body .consumption-wrapper p {
   font-weight: bolder;
   letter-spacing: 1px;
