remove unnecesery intems from menu, and fix css on mwh section

--- a/public/stylesheets/parts/_nav.css
+++ b/public/stylesheets/parts/_nav.css
@@ -66,10 +66,10 @@ div.menu-mobile i.active {
 
 .main-nav ul li {
   border-right: 2px solid white;
-  padding: 5px;
+  padding: 5px 10px;
 }
 
-.main-nav ul li:nth-child(5) {
+.main-nav ul li:nth-child(3) {
   border-right: none;
 }
 
