--- a/public/stylesheets/parts/_nav.scss
+++ b/public/stylesheets/parts/_nav.scss
@@ -68,9 +68,9 @@ div.menu-mobile {
 
 
             border-right: 2px solid white;
-            padding: 5px;
+            padding: 5px 10px;
 
-            &:nth-child(5) {
+            &:nth-child(3) {
                 border-right: none;
             }
 
