--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,10 +15,10 @@ html
           a(href="/panel") Ofertomat                 
         li 
           a(class="main-nav__new-link" href="/mwh")  Ile MWh?  
-        li 
-          a(href="/panel/table")  E-Tablica         
-        li 
-          a(href="/stats")  Stats
+        //- li 
+        //-   a(href="/panel/table")  E-Tablica         
+        //- li 
+        //-   a(href="/stats")  Stats
         li 
           a(href="/consumption")  Zużycie FV    
     block content
