--- a/public/stylesheets/parts/_mwh.css
+++ b/public/stylesheets/parts/_mwh.css
@@ -19,7 +19,7 @@
 .calcFV {
   display: flex;
   flex-direction: column;
-  background: linear-gradient(90deg, #020024 0%, #b79de6 0%, #bb59ed 35%, #91a5e0 100%);
+  background: rgba(201, 191, 191, 0.922);
   max-width: 600px;
   margin: 0 auto;
   border: 2px solid #2d082d;
