--- a/public/stylesheets/parts/_mwh.scss
+++ b/public/stylesheets/parts/_mwh.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
 
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(183, 157, 230, 1) 0%, rgba(187, 89, 237, 1) 35%, rgba(145, 165, 224, 1) 100%);
+    background: rgba(201, 191, 191, 0.922);
     max-width: 600px;
     margin: 0 auto;
     border: 2px solid rgb(45, 8, 45);
