--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 4.2.1       
-    p(class="alert alert-success wrapper__title") Wersja 4.2.1 - auto od grudnia
+    h3 Ofertomat v. 4.3.0       
+    p(class="alert alert-success wrapper__title") Wersja 4.3.0 - auto [9999] zlikwidowane. Teraz wybierasz po prostu dokładnie od jakiego miesiąca zaczyna się umowa.
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -39,12 +39,24 @@ block content
         option(value="B21") B21                       
         option(value="B22") B22                       
     div
-      label(for="endOfAgreement") Koniec umowy bieżącej: 
+      label(for="endOfAgreement") Koniec umowy bieżącej:
+      select(id='endOfAgreementMonth')
+        option(class="oprion-12" value=12) Styczeń 
+        option(class="oprion-11" value=11) Luty 
+        option(class="oprion-10" value=10) Marzec 
+        option(class="oprion-9" value=9) Kwiecień 
+        option(class="oprion-8" value=8) Maj 
+        option(class="oprion-7" value=7) Czerwiec 
+        option(class="oprion-6" value=6) Lipiec 
+        option(class="oprion-5" value=5) Sierpień 
+        option(class="oprion-4" value=4) Wrzesień 
+        option(class="oprion-3" value=3) Październik 
+        option(class="oprion-2" value=2) Listopad 
+        option(class="oprion-1" value=1) Grudzień 
       select(id="endOfAgreement")
         option(class="option-2022" value=2022) 2022
         option(class="option-2021" value=2021) 2021
-        option(class="option-2020" value=2020) 2020
-        option(class="option-2019" value=9999) 9999  
+        option(class="option-2020" value=2020) 2020         
     div
       label(for="endOfNewAgreement") Nowa umowa do: 
       select(id="endOfNewAgreement")
