--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -5,7 +5,7 @@ block content
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
     h3 Ofertomat v. 4.3.0       
-    p(class="alert alert-success wrapper__title") Wersja 4.3.0 - auto [9999] zlikwidowane. Teraz wybierasz po prostu dokładnie od jakiego miesiąca zaczyna się umowa.
+    p(class="alert alert-success wrapper__title") Wersja 4.3.0 - auto [9999] zlikwidowane. Teraz wybierasz w jakim konkretnie miesiącu kończy się umowa - zakładasz, że z końcem miesiąca. Np. grudzień 2020 oznacza że klient ma umowę do 31.12.2020, więc masa liczy się od stycznia 2021.
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -167,13 +167,13 @@ block content
        div(class="change-price-close")
          img(src="./images/close_cross.png", alt="") 
 
-  script(src="/javascripts/energaCalc.js")    
-  script(src="/javascripts/smallparts/changepricepanel.js")
-  script(src="/javascripts/smallparts/changetariffs.js")  
-  script(src="/javascripts/smallparts/setToZero.js")
-  script(src="/javascripts/tariffEngine.js")  
-  //- script(src="/javascripts/babbleTest.js")
-  script(src="/javascripts/smallparts/easyPrices.js") 
-  script(src="/javascripts/smallparts/calcSavings.js")
-  script(src="/javascripts/smallparts/calcWear.js")
+  //- script(src="/javascripts/energaCalc.js")    
+  //- script(src="/javascripts/smallparts/changepricepanel.js")
+  //- script(src="/javascripts/smallparts/changetariffs.js")  
+  //- script(src="/javascripts/smallparts/setToZero.js")
+  //- script(src="/javascripts/tariffEngine.js")  
+  script(src="/javascripts/babbleTest.js")
+  //- script(src="/javascripts/smallparts/easyPrices.js") 
+  //- script(src="/javascripts/smallparts/calcSavings.js")
+  //- script(src="/javascripts/smallparts/calcWear.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous")
