--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ body {
   height: 100vh;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url("../images/aurora.jpg");
+  background: url("../images/photovoltaic1.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -290,12 +290,7 @@ body .main-nav.show {
 body .wrapper {
   width: 800px;
   margin: 25px auto 0;
-  background: #c2e59c;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, rgba(100, 179, 244, 0.8), rgba(194, 229, 156, 0.8));
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, rgba(100, 179, 244, 0.8), rgba(194, 229, 156, 0.8));
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: rgba(206, 223, 230, 0.66);
   padding: 20px;
   border: 3px solid black;
   box-shadow: 4px 4px black;
@@ -306,6 +301,12 @@ body .wrapper {
 
 @media (max-width: 640px) {
   body .wrapper {
+    background: #c2e59c;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(100, 179, 244, 0.8), rgba(194, 229, 156, 0.8));
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(100, 179, 244, 0.8), rgba(194, 229, 156, 0.8));
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     max-width: 95vw;
     position: absolute;
     top: 50px;
