--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,3 +23,4 @@ html
           a(href="/consumption")  Zużycie FV    
     block content
 script(src="/javascripts/mobile.js") 
+script(src="/javascripts/snow.js") 
