--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -5,7 +5,7 @@ block content
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
     h3 Ofertomat v. 4.3.0       
-    p(class="alert alert-success wrapper__title") Wersja 4.3.0 - auto [9999] zlikwidowane. Teraz wybierasz w jakim konkretnie miesiącu kończy się umowa - zakładasz, że z końcem miesiąca. Np. grudzień 2020 oznacza że klient ma umowę do 31.12.2020, więc masa liczy się od stycznia 2021.
+    p(class="alert alert-success wrapper__title") Wybierz w jakim konkretnie miesiącu kończy się umowa - zakładasz, że z końcem miesiąca. Np. grudzień 2020 oznacza że klient ma umowę do 31.12.2020, więc masa liczy się od stycznia 2021. Ceny zawyżone są o 1.5% względem cennika rzeczywistego i nie możesz ich skutecznie edytować.
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
