export wear done

--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -366,6 +366,11 @@
                 }
             }
         }
+
+        &__btn--import,
+        &__info {
+            display: none;
+        }
     }
 }
 
