--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -361,6 +361,10 @@
   }
 }
 
+.wrapper .calc-wear__btn--import, .wrapper .calc-wear__info {
+  display: none;
+}
+
 @keyframes showCalcWear {
   0% {
     transform: scale(0);
