stats rebuild beta

--- a/views/statistics.pug
+++ b/views/statistics.pug
@@ -2,8 +2,7 @@ extends layout
 
 block content
   .stats-wrapper.container.container-fluid 
-    h1(class="stats-heading") Statystyki TPA    
-    p(class="alert alert-success") Jeśli nie wiesz co oznacza status po prostu najedź na niego myszką =)
+    h1(class="stats-heading") Statystyki TPA      
     .cases-wrapper
       each item in data
         div(class="stats-case"  id=`${item.name.toLowerCase()}`)
@@ -28,7 +27,7 @@ block content
         p(class="sum-par sum-answered") Rozmowa [Pozostałe]:   
           span(class="stats-sum")=`${allRecords - notAnsweredCalls}`
           span(class="percent")=allRecords > 0 ? `${(((allRecords - notAnsweredCalls) / allRecords)*100).toFixed(2)}%` : "0%"  
-        p(class="sum-par sum-answered") Pożądane [Klient sprawdza + Spotkanie]:   
+        p(class="sum-par sum-answered") Pożądane [Dośle FV + Spotkanie]:   
           span(class="stats-sum")=positiveEnd
           span(class="percent")=allRecords > 0 ? `${((positiveEnd / allRecords)*100).toFixed(2)}%` : "0%" 
         form(class="zero-form" action="/stats/zero-stats")
