--- a/public/stylesheets/parts/stats.scss
+++ b/public/stylesheets/parts/stats.scss
@@ -95,11 +95,11 @@
             background-color: rgba(255, 235, 59, 0.43)
         }
 
-        #klient {
+        div:nth-child(6) {
             background-color: rgba(1, 128, 1, 0.721);
         }
 
-        #spotkanie {
+        div:nth-child(7) {
             background-color: rgba(1, 128, 1, 0.921);
         }
 
