--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -70,5 +70,6 @@ body {
     @import './parts/chat';
     @import './parts/rippleBtn';
     @import './parts/consumption';
+    @import './parts/knowHow';
 
 }
