--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,7 +73,7 @@ body .login-wrapper {
 
 @media (max-width: 570px) {
   body .login-wrapper {
-    margin: -18px auto 0;
+    margin: 18px auto 0;
   }
 }
 
@@ -86,6 +86,8 @@ body .login-wrapper {
 
 body .login-wrapper input {
   display: block;
+  border: 1px solid black;
+  padding: 1px;
   margin: 30px auto 0;
   font-size: 25px;
 }
@@ -1820,4 +1822,55 @@ body .about-consumption__img {
   display: block;
   width: 100%;
   border: 2px solid black;
+}
+
+body .know-how {
+  display: none;
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #1d1d44;
+  color: #c4bdcb;
+  padding: 15px;
+  z-index: 10;
+  border-radius: 5px;
+  border: 2px solid #c4bdcb;
+  box-shadow: 2px 1px 5px 2px;
+}
+
+body .know-how__btn {
+  text-align: center;
+  padding: 5px 10px;
+  background: none;
+  color: whitesmoke;
+  border: 1px solid whitesmoke;
+  cursor: pointer;
+  font-weight: bolder;
+  transition: .3s;
+}
+
+body .know-how__btn:hover {
+  background-color: whitesmoke;
+  color: #1d1d44;
+}
+
+body .know-how__heading {
+  color: #6464fb;
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid;
+}
+
+body .know-how__par {
+  line-height: 130%;
+}
+
+body .know-how__par--important {
+  color: #6464fb;
+}
+
+body .know-how__list {
+  list-style: decimal;
+  padding: 20px;
 }
