--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -5,7 +5,8 @@ block content
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
     h3 Ofertomat v. 4.4.0       
-    p(class="alert alert-success wrapper__title") Usunięty rok 2020. Ceny zawyżone są o 1.5% względem cennika rzeczywistego i nie możesz ich skutecznie edytować.
+    p(class="alert alert-success wrapper__title") Usunięty rok 2020. Dodana podstawowa instrukcja. Ceny zawyżone są o 1.5% względem cennika rzeczywistego i nie możesz ich skutecznie edytować.
+    include parts/knowHow
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -177,6 +178,7 @@ block content
   //- script(src="/javascripts/tariffEngine.js")  
   script(src="/javascripts/babbleTest.js")
   script(src="/javascripts/smallparts/easyPrices.js") 
+  script(src="/javascripts/smallparts/knowHow.js") 
   //- script(src="/javascripts/smallparts/calcSavings.js")
   //- script(src="/javascripts/smallparts/calcWear.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous")
