fix calc bug - 2020 problem

--- a/public/stylesheets/parts/knowHow.css
+++ b/public/stylesheets/parts/knowHow.css
@@ -13,6 +13,12 @@
   box-shadow: 2px 1px 5px 2px;
 }
 
+@media (max-width: 640px) {
+  .know-how {
+    width: 90vw;
+  }
+}
+
 .know-how__btn {
   text-align: center;
   padding: 5px 10px;
