--- a/public/stylesheets/parts/knowHow.scss
+++ b/public/stylesheets/parts/knowHow.scss
@@ -1,3 +1,5 @@
+@import './breakepoints';
+
 .know-how {
     display: none;
     position: fixed;
@@ -11,6 +13,10 @@
     border-radius: 5px;
     border: 2px solid rgb(196, 189, 203);
     box-shadow: 2px 1px 5px 2px;
+
+    @include mq('xsmall') {
+        width: 90vw;
+    }
 
     &__btn {
         text-align: center;
