add extra date information to ofertomat

--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -43,7 +43,7 @@ block content
         option(value="B21") B21                       
         option(value="B22") B22                       
     div
-      label(for="endOfAgreement") Koniec umowy bieżącej:
+      label(for="endOfAgreement") Koniec umowy bieżącej: 31.
       select(id='endOfAgreementMonth')
         option(class="oprion-12" value=12) Styczeń 
         option(class="oprion-11" value=11) Luty 
@@ -62,7 +62,7 @@ block content
         option(class="option-2021" value=2021) 2021
         option(class="option-2020" value=2020) 2020         
     div
-      label(for="endOfNewAgreement") Nowa umowa do: 
+      label(for="endOfNewAgreement") Nowa umowa do: 31.12. 
       select(id="endOfNewAgreement")
         option(class="option-2022" value=2023) 2023
         option(class="option-2022" value=2022) 2022
