--- a/views/parts/g12w.pug
+++ b/views/parts/g12w.pug
@@ -1,5 +1,5 @@
 - var dataNumber = 11
-.extra-tariff-wrapper.tariffg12-wrapper
+.extra-tariff-wrapper.tariffg12w-wrapper
       p(class="tariff-wrapper-title-main") G12w 
       .wrap-all-in-tariff
         .year2023-wrapper 
