modify changeTarriffs.js, energaCalc.js, tariffEngine to fit g tariffs

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -216,6 +216,9 @@
 .wrapper .tariffb11-wrapper,
 .wrapper .tariffb21-wrapper,
 .wrapper .tariffb22-wrapper,
+.wrapper .tariffg11-wrapper,
+.wrapper .tariffg12-wrapper,
+.wrapper .tariffg12w-wrapper,
 .wrapper .intakec12ac12b,
 .wrapper .propositionc12ac12b,
 .wrapper .havePricesc12ac12b,
