--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -223,6 +223,9 @@
     .tariffb11-wrapper,
     .tariffb21-wrapper,
     .tariffb22-wrapper,
+    .tariffg11-wrapper,
+    .tariffg12-wrapper,
+    .tariffg12w-wrapper,
     .intakec12ac12b,
     .propositionc12ac12b,
     .havePricesc12ac12b,
