--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -506,6 +506,9 @@ body .wrapper .tariffc22b-wrapper,
 body .wrapper .tariffb11-wrapper,
 body .wrapper .tariffb21-wrapper,
 body .wrapper .tariffb22-wrapper,
+body .wrapper .tariffg11-wrapper,
+body .wrapper .tariffg12-wrapper,
+body .wrapper .tariffg12w-wrapper,
 body .wrapper .intakec12ac12b,
 body .wrapper .propositionc12ac12b,
 body .wrapper .havePricesc12ac12b,
