add update info to ofertomat.pug

--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 4.4.0       
-    p(class="alert alert-success wrapper__title") Usunięty rok 2020. Dodana podstawowa instrukcja. Ceny zawyżone są o 1.5% względem cennika rzeczywistego i nie możesz ich skutecznie edytować.
+    h3 Ofertomat v. 5.0.0       
+    p(class="alert alert-success wrapper__title") Dodane gt G11, G12, G12w. Dodana podstawowa instrukcja. Ceny zawyżone są o 1.5% względem cennika rzeczywistego i nie możesz ich skutecznie edytować.
     include parts/knowHow
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
