--- a/views/ofertomatLogin.pug
+++ b/views/ofertomatLogin.pug
@@ -2,17 +2,44 @@ extends layout
 
 block content
   link(rel="stylesheet", href="/stylesheets/css/loginForm/login.css")     
-  .c-subscribe-box.u-align-center.login-wrapper      
-    .rainbow
-      span
-      span
-    .c-subscribe-box__wrapper
-      h1(class='login-header')= title
-      p.c-subscribe-box__desc Nie musisz być bogaty, żeby zacząć, ale musisz zacząć, żeby być bogaty.
-      form(method='post')
-        input(id='username' type='text' placeholder='login' name="login")
-        input(id='password' type='password' placeholder='hasło' name="password")
-        .ripple-container
-          button(class="ripple-container__btn ripple-container__btn--second" type='submit') Zaloguj 
-  script(src="/javascripts/smallparts/rippleBtn.js")     
+  .login-wrap
+  .login-html   
+    .login-form
+      .sign-in-htm
+        form(method='post')
+          .group
+            label.label(for='user') Username
+            input#user.input(type='text' placeholder='login' name="login")
+          .group
+            label.label(for='pass') Password
+            input#pass.input(type='password' placeholder='hasło' name="password")       
+          .group
+            input.button(type='submit' value='Sign In')
+          .hr
+          .foot-lnk
+            a(href='#forgot') Forgot Password?
+      
+
+
+
+
+
+
+
+
+
+
+  //- .c-subscribe-box.u-align-center.login-wrapper      
+  //-   .rainbow
+  //-     span
+  //-     span
+  //-   .c-subscribe-box__wrapper
+  //-     h1(class='login-header')= title
+  //-     p.c-subscribe-box__desc Nie musisz być bogaty, żeby zacząć, ale musisz zacząć, żeby być bogaty.
+  //-     form(method='post')
+  //-       input(id='username' type='text' placeholder='login' name="login")
+  //-       input(id='password' type='password' placeholder='hasło' name="password")
+  //-       .ripple-container
+  //-         button(class="ripple-container__btn ripple-container__btn--second" type='submit') Zaloguj 
+  //- script(src="/javascripts/smallparts/rippleBtn.js")     
        
