--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
         li
           a(href="/panel") Ofertomat                 
         li 
-          a(class="main-nav__new-link" href="/mwh")  Ile MWh?  
+          a(href="/mwh")  Ile MWh?  
         //- li 
         //-   a(href="/panel/table")  E-Tablica         
         //- li 
