create gazomierz route and basic pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,8 +15,8 @@ html
           a(href="/panel") Ofertomat                 
         li 
           a(href="/mwh")  Ile MWh?  
-        //- li 
-        //-   a(href="/panel/table")  E-Tablica         
+        li 
+          a(href="/gazomierz")  GazoMierz      
         //- li 
         //-   a(href="/stats")  Stats
         li 
