--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -75,5 +75,5 @@ body {
     @import './parts/rippleBtn';
     @import './parts/consumption';
     @import './parts/knowHow';
-
+    @import './parts/gazomierz';
 }
