--- a/public/stylesheets/parts/_gazomierz.scss
+++ b/public/stylesheets/parts/_gazomierz.scss
@@ -1,9 +1,14 @@
 .gazomierz-wrapper {
     h3 {
-        margin-top: 10px;
+        margin-top: 5px;
         margin-bottom: 10px;
         font-size: 25px;
         text-align: center;
+        background-color: white;
+        padding: 5px;
+        border-radius: 10px;
+
+
     }
 
     .gazomierz {
