--- a/views/gazomierz.pug
+++ b/views/gazomierz.pug
@@ -6,7 +6,7 @@ block content
   div(class='gazomierz-wrapper container')
     h3 GazoMierz v. 1.0.0
     .gazomierz
-      button(class='btn btn-info gazomierz__insert-price') Wprowadź wycenę
+      button(class='btn btn-info gazomierz__insert-price') Wycena
       .insert-price
         i(class="fas fa-times-circle" id='closeInsertGazPrice')
         form(action="/set-price")
