add date select to gazomierz

--- a/public/stylesheets/parts/_gazomierz.scss
+++ b/public/stylesheets/parts/_gazomierz.scss
@@ -81,5 +81,15 @@
                 margin: 0 auto;
             }
         }
+
+        .agreement-start-gaz {
+            margin-top: 10px;
+        }
+
+        select {
+            font-size: 20px;
+            margin-left: 5px;
+
+        }
     }
 }
