--- a/views/gazomierz.pug
+++ b/views/gazomierz.pug
@@ -13,6 +13,30 @@ block content
           label(for="") Podaj wartość:
           input(type="text" placeholder='wartość z bazy')
           button(type='submit' class='btn btn-success') Zatwierdź
+      div(class='agreement-start-gaz')
+      label(for="agreementStartGaz") Umowa od:
+      select(id='agreementStartGazMonth')
+        option(class="oprion-12" value=12) 01
+        option(class="oprion-11" value=11) 02 
+        option(class="oprion-10" value=10) 03 
+        option(class="oprion-9" value=9) 04 
+        option(class="oprion-8" value=8) 05
+        option(class="oprion-7" value=7) 06
+        option(class="oprion-6" value=6) 07
+        option(class="oprion-5" value=5) 08 
+        option(class="oprion-4" value=4) 09
+        option(class="oprion-3" value=3) 10
+        option(class="oprion-2" value=2) 11 
+        option(class="oprion-1" value=1) 12 
+      select(id="endOfAgreementGaz")
+        option(class="option-2022" value=2022) 2022
+        option(class="option-2021" value=2021) 2021                
+      div
+        label(for="endOfNewAgreementGaz") Umowa do: 31.12. 
+        select(id="endOfNewAgreementGaz")
+          option(class="option-2022" value=2023) 2023
+          option(class="option-2022" value=2022) 2022
+          option(class="option-2021" value=2021) 2021    
       div
         p(class='gazomierz__label') Opłata handlowa:
         input(type="text" placeholder='np. 6,30' id='gazOh' class='gazomierz__input')
