front gazomierz ready

--- a/public/stylesheets/parts/_gazomierz.scss
+++ b/public/stylesheets/parts/_gazomierz.scss
@@ -73,7 +73,8 @@
                 margin-bottom: 10px;
                 width: 100px;
                 display: block;
-                margin: 10px auto
+                margin: 10px auto;
+                text-align: center;
             }
 
             button {
