backend gazomierz ok

--- a/views/gazomierz.pug
+++ b/views/gazomierz.pug
@@ -11,7 +11,7 @@ block content
         i(class="fas fa-times-circle" id='closeInsertGazPrice')
         form(action="gazomierz/set-price/" method="post")
           label(for="") Podaj wartość:
-          input(type="text" placeholder='wartość z bazy' id='priceDbGaz' value=data[0].price)
+          input(type="text" name='price' placeholder='wartość z bazy' id='priceDbGaz' value=data[0].price)
           button(type='submit' class='btn btn-success') Zatwierdź
       div(class='agreement-start-gaz')
       label(for="agreementStartGaz") Umowa od:
