--- a/public/stylesheets/parts/_gazomierz.scss
+++ b/public/stylesheets/parts/_gazomierz.scss
@@ -1,4 +1,18 @@
+@import './mqGaz';
+
 .gazomierz-wrapper {
+
+    .agreement-start-gaz,
+    .endOfNewAgreementGaz {
+        text-align: center;
+    }
+
+    @include mq('medium') {
+        background-color: rgba(221, 221, 221, 0.741);
+        margin-top: 15px;
+        padding: 10px;
+    }
+
     h3 {
         margin-top: 5px;
         margin-bottom: 10px;
@@ -7,6 +21,11 @@
         background-color: white;
         padding: 5px;
         border-radius: 10px;
+
+        @include mq('medium') {
+            max-width: 300px;
+            margin: 10px auto;
+        }
 
 
     }
@@ -100,6 +119,11 @@
             border-radius: 10px;
             border: 1px solid rgb(92, 81, 81);
             margin-bottom: 5px;
+
+            @include mq('medium') {
+                max-width: 500px;
+                margin: 0 auto;
+            }
 
             p {
                 color: rgb(92, 81, 81);
