--- a/views/gazomierz.pug
+++ b/views/gazomierz.pug
@@ -12,32 +12,33 @@ block content
         form(action="gazomierz/set-price/" method="post")
           label(for="") Podaj wartość:
           input(type="text" name='price' placeholder='wartość z bazy' id='priceDbGaz' value=data[0].price)
-          button(type='submit' class='btn btn-success') Zatwierdź
-      div(class='agreement-start-gaz')
-      label(for="agreementStartGaz") Umowa od:
-      select(id='agreementStartGazMonth')
-        option(class="oprion-12" value=0) 01
-        option(class="oprion-11" value=1) 02 
-        option(class="oprion-10" value=2) 03 
-        option(class="oprion-9" value=3) 04 
-        option(class="oprion-8" value=4) 05
-        option(class="oprion-7" value=5) 06
-        option(class="oprion-6" value=6) 07
-        option(class="oprion-5" value=7) 08 
-        option(class="oprion-4" value=8) 09
-        option(class="oprion-3" value=9) 10
-        option(class="oprion-2" value=10) 11 
-        option(class="oprion-1" value=11) 12 
-      select(id="agreementStart")
-        option(class="option-2022" value=2023) 2023
-        option(class="option-2022" value=2022) 2022
-        option(class="option-2021" value=2021) 2021                
-      div
-        label(for="endOfNewAgreementGaz") Umowa do: 31.12. 
-        select(id="endOfNewAgreementGaz")
-          option(class="option-2022" value=2023) 2023
-          option(class="option-2022" value=2022) 2022
-          option(class="option-2021" value=2021) 2021    
+          button(type='submit' class='btn btn-danger') Zmień
+      div(className='gaz-date-wrapper')
+        div(class='agreement-start-gaz')
+          label(for="agreementStartGaz") Umowa od:
+          select(id='agreementStartGazMonth')
+            option(class="oprion-12" value=0) 01
+            option(class="oprion-11" value=1) 02 
+            option(class="oprion-10" value=2) 03 
+            option(class="oprion-9" value=3) 04 
+            option(class="oprion-8" value=4) 05
+            option(class="oprion-7" value=5) 06
+            option(class="oprion-6" value=6) 07
+            option(class="oprion-5" value=7) 08 
+            option(class="oprion-4" value=8) 09
+            option(class="oprion-3" value=9) 10
+            option(class="oprion-2" value=10) 11 
+            option(class="oprion-1" value=11) 12 
+          select(id="agreementStart")
+            option(class="option-2022" value=2023) 2023
+            option(class="option-2022" value=2022) 2022
+            option(class="option-2021" value=2021) 2021                
+        div(class='endOfNewAgreementGaz')
+          label(for="endOfNewAgreementGaz") Umowa do: 31.12. 
+          select(id="endOfNewAgreementGaz")
+            option(class="option-2022" value=2023) 2023
+            option(class="option-2022" value=2022) 2022
+            option(class="option-2021" value=2021) 2021    
       div
         p(class='gazomierz__label') Opłata handlowa:
         input(type="text" placeholder='np. 6,30' id='gazOh' class='gazomierz__input')
